chore: update answer and diagram from ascii to mermaid